{
    "name": "BattlesTacticInputAction",
    "maps": [
        {
            "name": "BattleTacticIA",
            "id": "66fc1df6-cf77-4cc0-bd91-c6a78850baf8",
            "actions": [
                {
                    "name": "NavigationDown",
                    "type": "Button",
                    "id": "5fb8f67f-c189-4eae-87c6-bae36631f586",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigationUp",
                    "type": "Button",
                    "id": "58052473-b7a3-4a0b-bf57-5d2902cfb213",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigationLeft",
                    "type": "Button",
                    "id": "23c0a4e0-5780-46bc-a134-262114221e56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigationRight",
                    "type": "Button",
                    "id": "6e99b716-5456-4c40-abb5-ed844bc25433",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "24132756-3ccc-4042-b422-e1c8841da0d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "1368f1e0-376c-4e56-86de-1c7618f6c3bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCameraRight",
                    "type": "Button",
                    "id": "9b830d68-d3f0-4211-9aa9-624de3b7317b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCameraLeft",
                    "type": "Button",
                    "id": "01f74269-ed2b-402e-9d33-779dc9436ac3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c9ba874-b368-42e1-930a-fd3955b3e51e",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigationDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "100dcb7d-1bed-440c-a106-425c355236aa",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigationUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "836dc354-924f-4dea-b49c-806205edd3ae",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigationLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b74db4a4-872a-4d7f-8d46-dc758c6b240e",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigationRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "749191f0-4333-4f5f-9ffe-391ec51f03ec",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff85586a-33e9-4d50-ae57-db5695fb3f13",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "214e3947-ab20-4310-8212-f55345c37916",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c12c6ea-b576-40d7-8f10-e7499af2c68d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}